--- a/home/style.css
+++ b/home/style.css
@@ -175,22 +175,41 @@ video {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    width: 100%;
+}
+
+.headerButton {
+    width: 32px;
+    height: 32px;
+    transition: transform 0.5s ease
 }
 
 .headerButton:hover {
     cursor: pointer;
+    transform: translateY(-2px);
 }
 
 #mailbox {
     background-image: url('./src/mailAlert.png');
-    width: 32px;
-    height: 32px;
+
 }
 
 #profile {
     background-image: url('./src/robot.png');
-    width: 32px;
-    height: 32px;
+}
+
+#about {
+    background-image: url('./src/about.png');
+
+}
+
+#date {
+    min-width: fit-content;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
 }
 
 #titleText {
@@ -275,7 +294,7 @@ video {
     }
 
     50% {
-        transform: scale(1.05);
+        transform: scale(1.15);
     }
 }
 
@@ -462,7 +481,9 @@ video {
     left: 30%;
     width: 150px;
     height: 250px;
-    transform: rotate(10deg)
+    transform: rotate(10deg);
+
+    background-image: url('./src/flyer.png')
 }
 
 #mailItem4:hover {
@@ -500,4 +521,38 @@ video {
 .calloutText {
     padding: 1em;
     border: 1px solid black;
+}
+
+#aboutText {
+    text-align: center;
+    white-space: pre-line;
+    width: 50%;
+}
+
+#founder {
+    max-width: 40%;
+    max-height: 70%;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    font-weight: bold;
+
+    background-color: pink;
+    border: 1px solid black;
+    box-shadow: inset -1px -1px 4px 0px rgba(0, 0, 0, 0.75);
+
+}
+
+#founderImage {
+    width: 100%;
+    height: 100%;
+    image-rendering: pixelated;
+
+}
+
+.pageTitle {
+    font-size: 24px;
 }
