--- a/style.css
+++ b/style.css
@@ -11,8 +11,45 @@ a:-webkit-any-link {
 
 
 
-h1 {
-    font-family: JuneBug
+@font-face {
+    font-family: W95FA;
+    src: url('../src/W95FA.otf');
+}
+
+
+a:-webkit-any-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+/* For Webkit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+    width: 16px;
+    /* Width of the vertical scrollbar */
+    height: 16px;
+    /* Height of the horizontal scrollbar */
+}
+
+/* The part of the scrollbar that the user can interact with (the handle) */
+::-webkit-scrollbar-thumb {
+    background-color: #3b3b3b;
+
+    /* Rounded edges */
+    border: 4px solid #2f2f2f;
+    /* Border around the thumb (retro blocky look) */
+}
+
+/* The track (background) of the scrollbar */
+::-webkit-scrollbar-track {
+    background: #8c8c8c;
+
+    /* Match the thumb's border-radius */
+}
+
+/* Hover effect for the thumb */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #5a5a5a;
+    /* Lighter grey when hovering over the thumb */
 }
 
 * {
@@ -28,11 +65,12 @@ body {
 
     width: 100vw;
     height: 100vh;
-    background-color: #D8F2EF;
+    background-color: #EEF4ED;
     overflow: hidden;
-    font-family: 'w95FA', sans-serif;
+    font-family: 'W95FA', sans-serif;
     font-weight: lighter;
     user-select: none;
+    color: #0B2545;
 }
 
 #tooltip {
@@ -74,7 +112,7 @@ body {
     height: 48px;
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
-    background-color: #829CB4;
+    background-color: #8DA9C4;
     box-sizing: border-box;
     padding: 16px;
 
@@ -87,29 +125,40 @@ body {
     text-align: center;
     align-items: center;
     width: 24px;
-    ` height: 16px;
+    height: 16px;
     padding-bottom: 0.25em;
     background-color: white;
-    border: 1px solid black;
-    box-shadow: inset -1px -1px 4px 0px rgba(0, 0, 0, 0.75);
+    border: 1px solid #0B2545;
+    box-shadow: inset -1px -1px 4px 0px rgba(11, 37, 69, 0.75);
     transition: transform 0.5s ease, visibility 1s ease;
 }
 
 #mainscreen {
     display: flex;
     flex-direction: column;
+    gap: 16px;
     align-items: center;
     justify-content: center;
-    gap: 16px;
-    width: auto;
+
     min-width: 98%;
-    height: auto;
     min-height: 90%;
+
     margin: 1%;
-    background-image: url("src./pixelbackground.png");
+    padding: 1%;
+    box-sizing: border-box;
+
+    background-image: url("../src/pixelbackground.png");
     background-position: center;
     background-size: 30%;
-    box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.75)
+    box-shadow: inset 0px 0px 5px 0px rgba(11, 37, 69, 0.75);
+
+    overflow-x: hidden;
+    /* margin-right: calc(-1 * (100vw - 100%)); */
+}
+
+#navbar,
+#mainscreen {
+    border: 1px solid #0B2545;
 }
 
 .fade-in {
@@ -139,14 +188,14 @@ body {
 
 #navbar,
 #mainscreen {
-    border: 1px solid black;
+    border: 1px solid #0B2545;
 }
 
 #titleText {
     font-family: 'Instrument Serif', serif;
     font-size: 64px;
     text-align: center;
-    text-shadow: 1px 1px 2px black;
+    text-shadow: 1px 1px 2px #0B2545;
     transition: transform 1s ease;
 
 }
@@ -160,8 +209,8 @@ body {
     padding-top: 0.25em;
     padding-bottom: 0.25em;
     background-color: white;
-    border: 1px solid black;
-    box-shadow: inset -1px -1px 4px 0px rgba(0, 0, 0, 0.75);
+    border: 1px solid #0B2545;
+    box-shadow: inset -1px -1px 4px 0px rgba(11, 37, 69, 0.75);
     transition: transform 0.5s ease, visibility 1s ease;
 }
 
@@ -173,9 +222,13 @@ body {
 
 .button:active {
     transform: translateY(2px);
-    background-color: black;
+    background-color: #0B2545;
     color: white;
     box-shadow: inset -1px -1px 4px 0px rgba(255, 255, 255, 0.75);
+}
+
+#loginButton {
+    width: fit-content;
 }
 
 #formContainer {
@@ -211,5 +264,5 @@ input {
 video {
     filter: contrast(0.9) brightness(1.2) saturate(0.8) blur(1px);
     /* image-rendering: pixelated; */
-    border: 1px solid black;
+    border: 1px solid #0B2545;
 }
