--- a/home/style.css
+++ b/home/style.css
@@ -110,6 +110,7 @@ img {
     background-size: 80%;
     background-position: center;
     background-repeat: repeat;
+    z-index: 10;
 }
 
 #backgroundOverlay {
@@ -403,6 +404,97 @@ img {
 }
 
 
+.flicker {
+    animation: flicker 1.5s infinite;
+    text-shadow: 0 0 2px #fff;
+}
+
+@keyframes flicker {
+
+    0%,
+    19%,
+    21%,
+    23%,
+    25%,
+    54%,
+    56%,
+    100% {
+        opacity: 1;
+    }
+
+    20%,
+    24%,
+    55% {
+        opacity: 0.4;
+    }
+}
+
+.jitter:hover {
+    animation: jitter 0.2s infinite;
+    position: relative;
+}
+
+@keyframes jitter {
+    0% {
+        top: 0;
+        left: 0;
+    }
+
+    25% {
+        top: 1px;
+        left: -1px;
+    }
+
+    50% {
+        top: -1px;
+        left: 1px;
+    }
+
+    75% {
+        top: 1px;
+        left: 1px;
+    }
+
+    100% {
+        top: 0;
+        left: 0;
+    }
+}
+
+.glitch {
+    color: white;
+    position: relative;
+}
+
+.glitch::before,
+.glitch::after {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    color: red;
+    z-index: -1;
+}
+
+.glitch::after {
+    color: blue;
+    left: 2px;
+    top: 2px;
+}
+
+.glitch::before {
+    color: green;
+    left: -2px;
+    top: -2px;
+}
+
+.freeze:hover {
+    transform: scale(1.02) rotate(-0.5deg);
+    filter: contrast(120%) brightness(90%);
+    letter-spacing: 0.05em;
+}
 
 
 #folderImageContainer {
@@ -457,24 +549,27 @@ img {
 }
 
 .folderName {
-    z-index: 10;
+    z-index: 1;
+    user-select: none;
     display: flex;
     flex-direction: column;
     align-items: right;
     justify-content: center;
-    text-align: left;
     position: absolute;
     padding: 8px;
     font-size: 24px;
     width: fit-content;
+    text-align: right;
+    cursor: pointer;
 }
 
 .folderName.left {
     right: 60%;
+
 }
 
 .folderName.right {
-    left: 65%;
+    right: 18%;
 }
 
 
@@ -522,7 +617,7 @@ img {
 }
 
 .folderImage:hover {
-    transform: translateY(-2px);
+    transform: translateY(-3px);
     cursor: pointer;
 }
 
@@ -546,6 +641,7 @@ img {
     flex-direction: column;
 
     overflow: hidden;
+    z-index: 3;
 }
 
 #mailHeader {
