--- a/hksed/style.css
+++ b/hksed/style.css
@@ -12,6 +12,8 @@
 body {
     overflow: hidden;
     font-family: 'W95FA', sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 #mainvid {
@@ -91,7 +93,6 @@ body {
 #popup2 {
     top: 50%;
     right: 25%;
-
     width: 20%;
 }
 
@@ -122,7 +123,7 @@ body {
 
 #popup8 {
     top: 5%;
-    right: 10%;
+    left: 50%;
 }
 
 #popup9 {
@@ -140,7 +141,6 @@ body {
     left: 25%;
 }
 
-
 #popup12 {
     top: 3%;
     left: 5%;
@@ -151,10 +151,44 @@ body {
     left: 50%;
 }
 
+#popup14 {
+    top: 15%;
+    right: 20%;
+}
+
+#popup15 {
+    top: 25%;
+    left: 50%;
+}
+
+#popup16 {
+    top: 35%;
+    right: 15%;
+}
+
+#popup17 {
+    top: 40%;
+    left: 20%;
+}
+
+#popup18 {
+    top: 70%;
+    right: 5%;
+}
+
+#popup19 {
+    top: 46%;
+    left: 10%;
+}
+
+#popup20 {
+    top: 50%;
+    right: 25%;
+}
+
 img {
     width: 100%;
     image-rendering: pixelated;
-    image-resolution: 10dpi;
     pointer-events: none;
     border: 2px solid;
     border-color: #303030 #808080 #808080 #303030;
