--- a/phone/style.css
+++ b/phone/style.css
@@ -48,6 +48,7 @@ button {
     border-color: #808080 #303030 #303030 #808080;
     box-shadow: inset -1px -1px 2px 0px #ccc;
     transition: visibility 1s ease;
+    user-select: none;
 }
 
 button:active {
@@ -165,6 +166,14 @@ select {
 #bgVideo.active,
 #bgImage.active {
     opacity: 1;
+}
+
+#flower {
+    width: 32px;
+    height: 32px;
+    background-color: plum;
+    cursor: pointer;
+    border-color: #808080 #303030 #303030 #808080;
 }
 
 
