--- a/chain/style.css
+++ b/chain/style.css
@@ -38,7 +38,15 @@ body {
     top: 0;
     right: 0;
     cursor: col-resize;
-
+    background: #c0c0c0;
+    /* classic Win95 gray */
+    border-left: 2px solid #fff;
+    /* light on the left */
+    border-top: 2px solid #fff;
+    border-right: 2px solid #808080;
+    /* dark on the right */
+    border-bottom: 2px solid #808080;
+    box-sizing: border-box;
 }
 
 .verticalHandle {
@@ -46,7 +54,14 @@ body {
     height: 10px;
     bottom: 0;
     cursor: row-resize;
+    background: #c0c0c0;
+    border-left: 2px solid #fff;
+    border-top: 2px solid #fff;
+    border-right: 2px solid #808080;
+    border-bottom: 2px solid #808080;
+    box-sizing: border-box;
 }
+
 
 
 .cell {
@@ -56,6 +71,7 @@ body {
     flex-grow: 1;
     box-sizing: border-box;
     color: white;
+    overflow: hidden;
 }
 
 .chain.show {
@@ -143,3 +159,53 @@ body {
 #chain18 {
     background-image: url("./src/day.png");
 }
+
+.smallImage {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    user-select: none;
+}
+
+#lavender {
+    top: 60%;
+    right: 1%;
+    max-width: 100px;
+}
+
+#watch {
+    top: 50%;
+    left: 50%;
+    max-width: 200px;
+}
+
+#skates {
+    top: 50%;
+    left: 50%;
+    max-width: 500px;
+}
+
+#book {
+    top: 50%;
+    left: 50%;
+    max-width: 500px;
+}
+
+#hair {
+    top: 50%;
+    left: 50%;
+    max-width: 500px;
+}
+
+#bag {
+    top: 50%;
+    left: 50%;
+    max-width: 500px;
+}
+
+#medicine {
+    top: 50%;
+    left: 50%;
+    max-width: 500px;
+}
+
+ew43
