--- a/slogan/style.css
+++ b/slogan/style.css
@@ -28,59 +28,22 @@ a:-webkit-any-link {
 }
 
 body {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 100vh;
+    width: 100vw;
+
     padding: 0;
     margin: 0;
-    background-image: url(./background.png);
-    overflow-y: scroll;
-    overflow-x: hidden;
+
+    background-image: url("./warning.jpg")
 }
 
-.rabbit {
+
+.container {
     position: absolute;
-}
-
-#rabbit1 {
-    top: 60%;
-}
-
-#rabbit2 {
-    top: 110%;
-    left: 50%;
-}
-
-#rabbit3 {
-    top: 200%;
-    right: 10%;
-}
-
-#rabbit4 {
-    top: 300%;
-}
-
-#rabbit5 {
-    top: 370%;
-    right: 15%;
-    opacity: 0.40;
-}
-
-#rabbit6 {
-    top: 500%;
-}
-
-#rabbit7 {
-    top: 600%;
-    opacity: 0.30;
-}
-
-
-
-
-#room {
-    position: absolute;
-    top: 50%;
-    left: 70%;
-
-    transform: translate(-50%, -50%);
-
-    width: 50%;
+    display: flex;
+    height: 50vh;
+    gap: 64px;
+    bottom: 50px;
 }
